# bmk-sandbox

./: .gitignore  README.md
c++/: main.cpp
c/ec_crypto/: ec_crypto.c
c/libnotify/: build.sh  demo.c
c/linear_equation/: Makefile
c/linear_equation/examples/: example_dgesv.c  example_dgetrs.c
c/linear_equation/src/: exercise6.c  exercise6.h
c/lu_decomp/: Makefile
c/lu_decomp/src/: exercise4.c  exercise4.h
c/mat_mult/: Makefile
c/mat_mult/src/: exercise2.c
c/tutorials/: cat.c  cat2.c  dcl.c  diff.c  kr_exercises.c  malloc.c  tutorial.c
configs/: dot_bashrc  dot_emacs  dot_emacs_macosx  dot_zshrc  tmux.conf
configs/dot_emacs.d/: cc_mode_init.el  haskell_mode_init.el
configs/xmonad/: xmonad.hs  xmonad.start
configs/xmonad_20120526/: xmobarrc  xmonad.hs
haskell/99_problems/: 99Problems.hs
haskell/cl-bjsos-test/: cl-bjsos-test.cabal
haskell/cl-bjsos-test/src/: BjsosTests.hs
haskell/crypto-client/: crypto-client.cabal
haskell/crypto-client/src/: Client.hs  GKSL.hs
haskell/exercises/: Async.hs  BubbleSort.hs  Catches.hs  ChatServer.hs  DailyProgrammer.hs  ExceptionHandling.hs  Excercise.hs  Excercise1.hs  Par.hs  TChan.hs  TMVar.hs  Timeout.hs  bubble.hs
haskell/fp1_tut/: lu01_kim.hs  lu02_kim.hs  lu03_kim.hs  lu05_kim.hs  lu06_kim.hs  ptowers.hs  testcases_lu06.txt
haskell/google-exercises/: GoogleEx.hs
haskell/hdbc/: HDBCExample.hs
haskell/json/: Json.hs  Main.hs  Prettify.hs  PrettyJSON.hs  PutJSON.hs  prettyjson.cabal
haskell/json-server/: json-server.cabal
haskell/libnotify/: libnotify.cabal
haskell/misc/: SixNumbersSolver.hs  SortPoints.hs
haskell/parsec/: StaticFiles.hs
haskell/project_euler/: herbert_hotel.hs  project_euler.hs  project_euler_50_100.hs
haskell/sqlite-simple/: KeyStore.hs  create_db.sh
haskell/st_monad/: STMonadExamples.hs
haskell/sudoku/: Sudoku.hs
haskell/warp-hello/: warp-hello.cabal
javascript/radar/: index.html  radar.js
practice/hackerrank/: SquareTenTree.java  SwapNodes.java
practice/interview_cake/: Problem2.java  Problem3.java  Problem4.java  Problem5.java  Problem6.java
python/snake_cube/: solver.py
python/sqlalchemy/: .gitignore  setup.py
scripts/: avplayer_uploader.py  ch_haskell_env.sh  update_ghc_env.sh
(+55 files in other folders)
