Synopsis: My pretty printing library, with JSON support
Name: My-Pretty-Printer
Version: 0.1
Description:
  A simple pretty-printing library that illustrates how to
  develop a Haskell library.
Author:        Real World Haskell

Cabal-Version: >= 1.2

library
  Exposed-Modules: Prettify
                   PrettyJSON
                   Json
  Build-Depends:   base >= 2.0

